Enhanced log section and misc.

--- a/_posts/2022-06-4-hoy.md
+++ b/_posts/2022-06-4-hoy.md
@@ -3,7 +3,7 @@ title: "Sábado, 4 de junio de 2022"
 date: 2022-06-04T00:00:00+00:00
 author: Enrique Benimeli
 layout: post
-permalink: /hoy/
+permalink: /junio/
 categories: General
 tags: [personal]
 ---
@@ -13,3 +13,16 @@ mea nulla secessit modo et. Hospes **felices stetimusque** erat: **Niobe
 nostro**, ne ruris *in deas extrema*. Thebaides crimina, tu dixerat eripiet
 quiescere animae, pervenientia fuit furta sacrata illam, dabat. Quod munera
 monstra rimas ultra cunctos.
+
+<blockquote class="twitter-tweet"><p lang="und" dir="ltr">😅 ... <a href="https://t.co/zZnijc7Nqb">pic.twitter.com/zZnijc7Nqb</a></p>&mdash; Elliott 📖 | 🚀 (@elliottaleksndr) <a href="https://twitter.com/elliottaleksndr/status/1531923521470926848?ref_src=twsrc%5Etfw">June 1, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+Texto.
+
+
+{% highlight java %}
+class Simple{  
+    public static void main(String args[]){  
+     System.out.println("Hello Java");  
+    }  
+}  
+{% endhighlight %}
