Post update: 150 fotografías que hablan

--- a/_posts/2022-12-25-150fotos.md
+++ b/_posts/2022-12-25-150fotos.md
@@ -10,4 +10,6 @@ tags: [fotografía,arte,creatividad]
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/G7Ppl3DXuok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+He rescatado este proyecto que hice con una selección de mis fotografías. Nueva música. Más fotos en 2023, espero.
+
 **YouTube** \| [150 fotografías que hablan](https://youtu.be/G7Ppl3DXuok/)
