Post minor correction

--- a/_posts/2023-04-15-shuffled.md
+++ b/_posts/2023-04-15-shuffled.md
@@ -15,6 +15,6 @@ La aplicación muestra algunas palabras al azar sobre un tema determinado (geogr
 
 De momento, tan solo es una versión preliminar y sigo añadiendo más temas y nuevas opciones. Espero que os guste.
 
-**Artículo en Esfera TIC** \| [www.esferatic.com/shuffled](https://www.esferatic.com/shuffled)
+**Artículo en Esfera TIC** \| [www.esferatic.com/shuffled](https://www.esferatic.com/2023/04/shuffled/)
 
 **Shuffled!** \| [www.esferatic.com/shuffled](https://www.esferatic.com/shuffled/)
