--- a/_posts/2023-05-16-ochoenpunto-150.md
+++ b/_posts/2023-05-16-ochoenpunto-150.md
@@ -16,4 +16,4 @@ Me detuve cuando escribí 50 artículos en el blog y también cuando llegué al 
 
 No diré aquello de que he llegado hasta este punto sin apenas darme cuenta o que, como quien no quiere la cosa, [este es el artículo número 150](https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/).
 
-**Ocho en punto** \| [www.ochoenpunto.com](https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/)
+**Ocho en punto** \| [Un tercer alto en el camino: 150 artículos sobre organización personal](https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/)
