Format minor change

--- a/_posts/2023-05-16-ochoenpunto-150.md
+++ b/_posts/2023-05-16-ochoenpunto-150.md
@@ -14,6 +14,6 @@ Es cierto que los números no importan; a mí, desde luego, no me importan. Sin 
 
 Me detuve cuando escribí 50 artículos en el blog y también cuando llegué al centenar. Ahora es momento de hacer balance después de añadir otras 50 publicaciones al blog.
 
-No diré aquello de que he llegado hasta este punto sin apenas darme cuenta o que, como quien no quiere la cosa, [este es el artículo número 150](https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/).
+No diré aquello de que he llegado hasta este punto sin apenas darme cuenta o que, como quien no quiere la cosa, [este es el artículo número 150](https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/) en *Ocho en punto*.
 
 **Ocho en punto** \| [Un tercer alto en el camino: 150 artículos sobre organización personal](https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/)
