--- a/_posts/2023-05-16-ochoenpunto-150.md
+++ b/_posts/2023-05-16-ochoenpunto-150.md
@@ -1,5 +1,5 @@
 ---
-title: "150 artículos sobre organización personal"
+title: "150 artículos sobre productividad"
 date: 2023-05-16T00:08:00+00:00
 author: Enrique Benimeli
 layout: post
