Link to illustration on Pixabay

--- a/_posts/2023-05-21-post.md
+++ b/_posts/2023-05-21-post.md
@@ -30,4 +30,5 @@ En 100 palabras:
 
 > Enviar mensajes en momentos inoportunos puede tener efectos inesperados. Es fundamental considerar el horario de trabajo propio y del receptor antes de enviar un mensaje. Respetar los límites laborales es importante para demostrar profesionalismo y consideración hacia los demás. Elegir el canal adecuado también es relevante. Los correos electrónicos pueden enviarse en cualquier momento, pero es preferible hacerlo durante el horario laboral para mantener una imagen profesional. En el caso de mensajes instantáneos, es crucial tener en cuenta los horarios del receptor y evitar interrupciones fuera de su horario de trabajo. Una comunicación efectiva demuestra organización y eficacia.
 
-**ChatGPT** \| [chat.openai.com](https://chat.openai.com/)
+**ChatGPT** \| [chat.openai.com](https://chat.openai.com/)<br/>
+**Imagen** | [ChatGPT](https://pixabay.com/illustrations/chatgpt-ai-artificial-intelligence-7902213/)
