--- a/_posts/2023-09-13-ia-eso.md
+++ b/_posts/2023-09-13-ia-eso.md
@@ -10,7 +10,7 @@ tags: [programación,IA,robótica]
 
 [![image](assets/images/posts/2023/09/aipr2.png)]()
 
-Este curso 2023/2024 impartiré la asignatura de *Inteligencia artificial, programación y robótica* (así se llama) en 2.º y 3.º de ESO. Una es «continuación» de la otra, o al menos se necesitan dos cursos para alcanzar los objetivos de esta materia. Con la nueva ley educativa LOMLOE, el entrar primero los cursos impares (1.º y 3.º), los alumnos de 3.º del curso pasado solo tuvieron oportunidad de aprender durante un año este tipo de contenidos sobre desarrollo de software, IA y robótica.
+Este curso 2023/2024 impartiré la asignatura de *Artificial Intelligence, Programming and Robotics* en 2.º y 3.º de ESO. Una es «continuación» de la otra, o al menos se necesitan dos cursos para alcanzar los objetivos de esta materia. Con la nueva ley educativa LOMLOE, el entrar primero los cursos impares (1.º y 3.º), los alumnos de 3.º del curso pasado solo tuvieron oportunidad de aprender durante un año este tipo de contenidos sobre desarrollo de software, IA y robótica.
 
 Este año se incorporan a la LOMLOE los cursos pares, 2.º y 4.º, de modo que los alumnos ya cursarán esta materia durante 2 años seguidos. Esto facilita mucho la programación y secuenciación de actividades y, además, se puede profundizar en varios temas y proponer proyectos más ambiciosos.
 
