--- a/_posts/2023-09-18-ios17.md
+++ b/_posts/2023-09-18-ios17.md
@@ -10,7 +10,13 @@ tags: [Apple,iOS,smartphone]
 
 [![image](assets/images/posts/2023/09/ios17_apple.jpg)]()
 
-Si todo va según lo previsto, **iOS 17** estará disponible hoy a partir de las 19:00 (hora peninsular de España). [En Applesfera](https://www.applesfera.com/ios/hoy-llega-ios-17-prepara-tu-iphone-actualizacion-sea-rapida-sencilla-posible) nos dan unos **sabios consejos** antes de lanzarnos a instalar esta nueva versión en nuestro dispositivo. Las sugerencias son de sentido común, pero a en ocasiones las ganas de probar lo nuevo puede con nosotros. Más vale prevenir que lamentar.
+Si todo va según lo previsto, **iOS 17** estará disponible hoy a partir de las 19:00 (hora peninsular de España).
+
+Puedes descarga e instalar la actualización en:
+
+<code>Ajustes > General > Actualización de software</code>
+
+[En Applesfera](https://www.applesfera.com/ios/hoy-llega-ios-17-prepara-tu-iphone-actualizacion-sea-rapida-sencilla-posible) nos dan unos **sabios consejos** antes de lanzarnos a instalar esta nueva versión en nuestro dispositivo. Las sugerencias son de sentido común, pero a en ocasiones las ganas de probar lo nuevo puede con nosotros. Más vale prevenir que lamentar.
 
 Básicamente, deberíamos tener a mano nuestras contraseñas y códigos de bloqueo, asegurarnos de que tendremos espacio suficiente para instalar iOS 17 (más de 6 GB probablemente) y hacer una copia de seguridad, por si las moscas. Por cierto, no todos los modelos de iPhone pueden aplicar esta actualización (iPhone 8, iPhone 8 Plus y iPhone X [se quedan fuera](https://www.applesfera.com/ios/malas-noticias-llegada-ios-17-estos-tres-iphones-se-quedaran-recibir-actualizaciones-oficiales)).
 
