--- a/_posts/2023-10-20-steve-jobs-1981.md
+++ b/_posts/2023-10-20-steve-jobs-1981.md
@@ -14,14 +14,6 @@ En 1981, un joven **Steve Jobs** de apenas 25 años explicaba cómo el ordenador
 
 Desde esta perspectiva, destacaba la capacidad de la **tecnología** para **ampliar y mejorar** nuestras **facultades cognitivas**, lo que nos permitía alcanzar objetivos y abordar problemas de manera más efectiva. En aquel momento, Apple era una empresa con menos de cinco años de existencia, y Jobs aún no tenía la fama que posteriormente alcanzaría.
 
-La **analogía** la podéis escuchar en la respuesta que da Steve Jobx al entrevistador cuando este le pregunta: «¿Qué tipo de persona necesitaría un ordenador personal hoy, del tipo que ofrece usted?».
-
-<div class="embed-container">
-    <iframe src="https://www.youtube.com/watch?v=WVvpCpDDui0" frameborder='0' allowfullscreen></iframe>
-</div>
-
-La transcripción:
-
-> There was an article in *Scientific American* in the early 70s which compared the efficiency of locomotion for various species of things on the planet. In other words, they measured how much energy it took for a bird to get from point A to point B compared with the energy it took a fish to get the same distance, and a goat, and a person and all sorts of other  things and they ranked them and it turns out the Condor, one Condor was the most efficient and man came in with a rather  unimpressive showing about a third of the way down the list somewhat disappointing. But someone there had the insight to test the efficiency of man riding a bicycle, and man riding a bicycle was twice as good as the Condor all the way off the end of the list. And what it really illustrated was **man's ability as a tool maker** to fashion a tool that can **amplify an inherent ability that he has** and that's exactly what we think we're doing. We think we're basically fashioning a 21st century bicycle here, which can amplify an inherent intellectual ability that man has, and really take care of a lot of drudgery to free people to do much more creative  work.
+Lo cuento en mi último artículo de Esfera TIC: [*Steve Jobs, la IA y una analogía en 1981*](https://www.esferatic.com/2023/10/steve-jobs-ia-analogia-1981/)
 
 **Vídeo** · [*Steve Jobs Interview - 2/18/1981*](https://www.youtube.com/watch?v=WVvpCpDDui0)
