--- a/_posts/2023-10-20-steve-jobs-1981.md
+++ b/_posts/2023-10-20-steve-jobs-1981.md
@@ -10,10 +10,8 @@ tags: [Steve Jobs, Apple, PC]
 
 [![image](assets/images/posts/2023/10/steve_jobs_1981_int.jpeg)](https://www.youtube.com/watch?v=WVvpCpDDui0)
 
-En 1981, un joven **Steve Jobs** de apenas 25 años explicaba cómo el ordenador se concebía como una herramienta capaz de **potenciar las habilidades** intelectuales de las personas.
+En 1981, un joven **Steve Jobs** de apenas 25 años [explicaba en una entrevista](https://www.youtube.com/watch?v=WVvpCpDDui0) cómo el ordenador se concebía como una herramienta capaz de **potenciar las habilidades** intelectuales de las personas.
 
-Desde esta perspectiva, destacaba la capacidad de la **tecnología** para **ampliar y mejorar** nuestras **facultades cognitivas**, lo que nos permitía alcanzar objetivos y abordar problemas de manera más efectiva. En aquel momento, Apple era una empresa con menos de cinco años de existencia, y Jobs aún no tenía la fama que posteriormente alcanzaría.
+Desde esta perspectiva, destacaba la capacidad de la **tecnología** para **ampliar y mejorar** nuestras **facultades cognitivas**, lo que nos permitía alcanzar objetivos y abordar problemas de manera más efectiva. En aquel momento, Apple era una empresa con menos de cinco años de existencia, y Jobs aún no tenía la fama que posteriormente alcanzaría. Lo cuento en mi último [artículo](https://www.esferatic.com/2023/10/steve-jobs-ia-analogia-1981/) de Esfera TIC.
 
-Lo cuento en mi último artículo de Esfera TIC: [*Steve Jobs, la IA y una analogía en 1981*](https://www.esferatic.com/2023/10/steve-jobs-ia-analogia-1981/)
-
-**Vídeo** · [*Steve Jobs Interview - 2/18/1981*](https://www.youtube.com/watch?v=WVvpCpDDui0)
+**Esfera TIC** · [*Steve Jobs, la IA y una analogía en 1981*](https://www.esferatic.com/2023/10/steve-jobs-ia-analogia-1981/)
